New fix for gitignore and delete client dependencies

--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,5 +1,9 @@
 # See https://help.github.com/ignore-files/ for more about ignoring files.
 /configfile.js
+
+#client config file
+/src/configfile.js
+
 # dependencies
 /node_modules
 
