--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "react-dom": "^16.4.2",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
+    "react-share": "^2.3.1",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.4.0",
     "uuid": "^3.3.2"
