--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,19 @@
     "@material-ui/core": "^3.0.3",
     "@material-ui/icons": "^3.0.1",
     "@okta/okta-react": "^1.0.3",
+    "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
     "material-ui": "^0.20.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
     "react-share": "^2.3.1",
     "react-transition-group": "^2.4.0",
     "reactstrap": "^6.4.0",
+    "redux": "^4.0.0",
+    "redux-thunk": "^2.3.0",
     "uuid": "^3.3.2"
   },
   "scripts": {
