--- a/client/package.json
+++ b/client/package.json
@@ -8,9 +8,11 @@
     "@okta/okta-react": "^1.0.3",
     "axios": "^0.18.0",
     "bootstrap": "^4.1.3",
+    "google-map-react": "^1.0.6",
     "material-ui": "^0.20.2",
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-google-maps": "^9.4.5",
     "react-redux": "^5.0.7",
     "react-router-dom": "^4.3.1",
     "react-scripts": "1.1.5",
