--- a/package.json
+++ b/package.json
@@ -1,5 +1,8 @@
 {
   "name": "optimize-mern",
+  "engines": {
+    "node": "8.9.x"
+  },
   "version": "1.0.0",
   "description": "Optimize application to find quickest routes in graphs, built with the MERN stack",
   "main": "server.js",
