--- a/client/.gitignore
+++ b/client/.gitignore
@@ -1,4 +1,8 @@
-# See https://help.github.com/ignore-files/ for more about ignoring 
+# See https://help.github.com/ignore-files/ for more about ignoring files.
+/configfile.js
+
+#client config file
+/src/configfile.js
 
 # dependencies
 /node_modules
